--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,8 +34,11 @@
         android:layout_weight="3"-->
 
 
-
-
+        <SeekBar
+            android:layout_width="147dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/seekBar"
+            android:layout_gravity="center" />
     </FrameLayout>
 
 </FrameLayout>
