--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -4,12 +4,33 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@drawable/euromilhoes_720_1280_clean"
     tools:context="pessanha.com.myfirstapp.ResultsActivity">
-
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView"
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_gravity="center_horizontal|top"
+        android:baselineAligned="false"
+        android:layout_alignParentBottom="false"
+        android:layout_alignParentLeft="false"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true" />
+        android:gravity="top">
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="150dp"
+        android:id="@+id/imageView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+
+        android:src="@drawable/last_results_v2"
+        android:layout_gravity="center_horizontal|bottom|top" />
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/listView"
+            android:layout_alignParentLeft="true"
+            android:layout_margin="20dp" />
+    </LinearLayout>
+
 </RelativeLayout>
