--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:background="@drawable/euromilhoes__720_1280"
+    android:layout_height="match_parent" android:background="@drawable/euromilhoes_4_720_1280"
     tools:context="pessanha.com.myfirstapp.Start"
     style="@style/FullscreenTheme">
 
@@ -16,38 +16,42 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_gravity="center_horizontal|bottom"
-        android:padding="30dp"
+        android:padding="20dp"
         android:baselineAligned="false"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="false"
         android:gravity="bottom">
 
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="250dp"
+            android:layout_height="78dp"
             android:id="@+id/imageButton"
-            android:maxWidth="90px"
+            android:background="@null"
             android:layout_gravity="center_horizontal|bottom"
-            android:background="@drawable/btn_1_small_v2"
-            android:clickable="true" />
+            android:clickable="true"
+            android:src="@drawable/btn_1_small_v4"
+            android:maxHeight="78dp"
+            android:maxWidth="250dp"
+            android:minWidth="250dp" />
 
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="180dp"
+            android:layout_height="56dp"
             android:id="@+id/imageButton2"
-            android:maxWidth="90px"
+            android:background="@null"
             android:layout_gravity="center_horizontal|bottom"
-            android:background="@drawable/btn_2_small_v2" />
+            android:layout_marginBottom="70dp"
+            android:src="@drawable/btn_2_small_v4" />
 
-        <ImageButton
+        <!--<ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/imageButton3"
-
+            android:maxWidth="120px"
             android:scaleType="centerInside"
             android:adjustViewBounds="true"
             android:layout_gravity="center_horizontal|bottom"
-            android:background="@drawable/btn_3_small_v2" />
+            android:background="@drawable/btn_3_small_v2" />-->
 
         </LinearLayout>
 </RelativeLayout>
