New camera process

--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:background="@drawable/euromilhoes_4_720_1280"
-    tools:context="pessanha.com.myfirstapp.Start"
+    tools:context="pessanha.com.myfirstapp.StartActivity"
     style="@style/FullscreenTheme">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
