--- a/app/src/main/res/layout/activity_ocr.xml
+++ b/app/src/main/res/layout/activity_ocr.xml
@@ -34,11 +34,11 @@
         android:layout_weight="3"-->
 
 
-        <SeekBar
+        <!--<SeekBar
             android:layout_width="147dp"
             android:layout_height="wrap_content"
             android:id="@+id/seekBar"
-            android:layout_gravity="center" />
+            android:layout_gravity="center" />-->
     </FrameLayout>
 
 </FrameLayout>
